# LimebikeApp

./: .gitignore  README.md  pyproject.toml
RBAC/: client.py  dependency.py  important.txt  schema_loader.py  service.py
RBAC/notes/: abac.txt  abac.zed  productionsetup.txt  rbac-architecure.txt  rbac.zed  spicedb.txt
RBAC/schemas/: app.zed  bike.zed  pickup.zed  schema.zed  user_roles.zed  zedcli.txt
RBAC/zednotes/: cognito+spicedb.txt  practice2.txt  relationship.txt
app/: exception_handlers.py  main.py
config/: config.py  namespaces.py  settings.toml
config/security/: auth.py  cognito.py  jwt.py  models.py  tokens.txt
crud/bikes/: bikes.py
crud/users/: auth.py  users.py
exceptions/: custom_db_exceptions.txt  db_exceptions.py  handlers.py
infra/gRPC/notes/: gRPCIntro.txt  whyGRPC.txt
mobile/: app.config.ts  app.json  package-lock.json  package.json
mobile/app/: _layout.tsx
mobile/app/(auth)/: EmailEnterCodeScreen.tsx  EmailSentScreen.tsx  OtherOptionsScreen.tsx  PhoneSentScreen.tsx  SignInScreen.tsx  _layout.tsx
mobile/app/(map)/: CustomerDrawerContent.tsx  _layout.tsx  index.tsx  map.tsx
mobile/app/(menu)/: WalletScreen.tsx  _layout.tsx
mobile/app/(tabs)/: _layout.tsx  index.tsx
mobile/components/BaseComponents/: AppText.tsx  BaseOptionRow.tsx  CustomPressable.tsx  GooglePlacesAutocomplete.tsx  PaymentRowCard.tsx
mobile/components/Modals/: LimeBikeSearchModal.tsx
mobile/config/: colours.ts  config.ts  mapConfigs.ts  themes.ts
mobile/types/: DrawerMenuInterface.ts
mobile/types/icons/: iconTypes.ts
mobile/types/payments/: paymentMethods.ts
mobile/utils/: data.ts
models/: base.py  bikes.py  from_shape.txt  outbox.py  pickup_points.py  refresh_tokens.py  users.py
routes/: bikes.py  email_otp.py  me.py  routelevel.txt  token.py  users.py
schemas/db/: bikes.py  outbox.py  pickup_points.py  users.py
schemas/routes/: bikes.py  email.py  outbox.py  phone.py  users.py
scripts/: README.md
services/: README.md  authz.py  dependencies.py  protobufs.txt  rbac_interface.py  rbac_relationships.py  test_spicedb.py
utils/: db_route_dependencies.py  db_session_manager.py  helpers.py  model_enums.py
utils/redis/: redis.txt  redis_cache.py
web/: package-lock.json
(+1 files in other folders)
